sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:22: error: ';' expected but 'if' found.
  }if (fait2 == 0) {
   ^