sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var len = getNombreValeurs()
  var fin1 = false
  var fin2 = false
  while (fin1 == false || fin2 == false) {
  var fait1 = 0
  var fait2 = 0
  for (i<- 0 to len -2) {
    if (plusPetitQue(i+1,i)) {
      echange(i+1,i)
      fait1 += 1
    }
  };if (fait1 == 0) {
    fin1 = true
  }
  for (i<- len-2 to 0) {
    if (plusPetitQue(i+1,i)) {
      echange(i+1,i)
      fait2 += 1
    }
  }if (fait2 == 0) {
    fin1 =true
  }
  }
  
}
     
     
     
     